--- a/index.html
+++ b/index.html
@@ -17,39 +17,42 @@
     </head>
     <body>
         <header class="masthead">
-          <h1>◎キャンペーン期間：2022年11月8日（火）〜11月20日（日）</h1>
+          <h1>・キャンペーン期間：<br class="br-sp">2022年11月8日(火)〜11月20日(日)</h1>
           <div class="sonic" style="text-align:center";> <img src="assets/img/banner01.png" alt="ソニックコラボ"> </div>
+          <div class="header-text">
               <h2>「ソニックフロンティア』を実況してCMに出演しようキャンペーン！」</h2>
                 <p>Fischer's-フィッシャーズ-がCMに出演中の<br>
                 ゲーム『ソニックフロンティア』の発売を記念し、<br>
                 みなさんの実況動画が、CMになるキャンペーンを開催！</p>
                 <p>指定のハッシュタグをつけてYouTubeに投稿された実況動画から、<br>
-                みなさんのリアクションやゲーム画面を、『ソニックフロンティア』のCMとして編集し、<br>
+                みなさんのリアクションやゲーム画面を、<br class="br-sp">『ソニックフロンティア』のCMとして編集し、<br>
                 WEB/TVで12月下旬よりＣＭ放送させていただきます！</p>
+           </dev>
         </header>
 
         <main>
           <div class="fish" style="text-align:center";><img src="assets/img/fish.jpg" alt="フィッシャーズの写真とソニックロゴ"></div>
+          <div class="main-content">
           <h3>■CMキャンペーン出演採用者数</h3>
             <p>・未定（5名以上を予定しております）</p>
           <h3>■応募期間</h3>
             <p>・2022年11月8日(火)~2022年11月20日(日)23:59</p>
             <p>※上記の時間内に投稿された動画が対象</p>
           <h3>■応募方法</h3>
-            <p>・『ソニックフロンティア』(プレイするプラットフォームは問いません)の実況動画を撮影、<br>
-              概要欄に「#ソニックCMキャンペーン」のハッシュタグを入れてキャンペーン期間中<br>
+            <p>・『ソニックフロンティア』(プレイするプラットフォームは問いません)の実況動画を撮影、<br class="br-pc">
+              概要欄に「#ソニックCMキャンペーン」のハッシュタグを入れてキャンペーン期間中<br class="br-pc">
               にYouTubeへ動画を投稿</p>
             <p>※１
-              本キャンペーンでは、YouTube上に投稿された応募動画から、<br>
-              みなさんのゲーム画面や声、リアクション、チャンネルアイコン、あるいは、<br>
-              その一部を切り取ってCMにさせていただく可能性がございます。<br>
-              あらかじめご了承のうえ、ご参加ください。<br>
+              本キャンペーンでは、YouTube上に投稿された応募動画から、<br class="br-pc">
+              みなさんのゲーム画面や声、リアクション、チャンネルアイコン、あるいは、<br class="br-pc">
+              その一部を切り取ってCMにさせていただく可能性がございます。<br class="br-pc">
+              あらかじめご了承のうえ、ご参加ください。<br class="br-pc">
             </p>
             <p>　※２
-                CMに採用させていただいたチャンネルと応募動画は、<br>
-                ソニック・ザ・ヘッジホッグ【公式】Twitter(@SonicOfficialJP)ほか、<br>
-                セガが運営するメディアでご紹介させていただく可能性がございます。<br>
-                あらかじめご了承ください。<br>
+                CMに採用させていただいたチャンネルと応募動画は、<br class="br-pc">
+                ソニック・ザ・ヘッジホッグ【公式】Twitter(@SonicOfficialJP)ほか、<br class="br-pc">
+                セガが運営するメディアでご紹介させていただく可能性がございます。<br class="br-pc">
+                あらかじめご了承ください。<br class="br-pc">
             </p>
           <h3>■注意事項</h3>
             <p>・キャンペーンへの応募は、日本在住者に限ります。<br>
@@ -83,30 +86,32 @@
               わいせつ、児童ポルノ及び児童の性的搾取を助長するデータを投稿する行為<br>
               営利を目的とした情報提供、広告宣伝もしくは勧誘行為<br>
             </p>
+            <p>
+              ◎ソニックフロンティア　CM出演キャンペーン概要<br>
+            ・応募規約：ご自身の顔が映る形での実写映像を使用したゲーム実況動画を投稿してください。<br>
+            ・生配信or編集動画どちらの形式でも問題ございません。<br>
+            ・キャンペーンハッシュタグ「#ソニックCMキャンペーン」は動画タイトル、もしくは概要欄へご記載をお願いいたします。<br>
+            ・当選者の発表のご連絡はございません。<br>
+            ・実況動画はソニックフロンティアに帰属します。<br>
+            </p>
+          </div>
+            <div class="btn01"><a class="btn" href="https://sonic.sega.jp/SonicFrontiers/products/"><img src="assets/img/button-buy.png" alt="限定版/予約特典アイテム 購入はこちら"></a></div>
         </main>
         <!-- Footer-->
-        <footer class="footer bg-light">
-          <p>
-            ◎ソニックフロンティア　CM出演キャンペーン概要<br>
-          ・応募規約：ご自身の顔が映る形での実写映像を使用したゲーム実況動画を投稿してください。<br>
-          ・生配信or編集動画どちらの形式でも問題ございません。<br>
-          ・キャンペーンハッシュタグ「#ソニックCMキャンペーン」は動画タイトル、もしくは概要欄へご記載をお願いいたします。<br>
-          ・当選者の発表のご連絡はございません。<br>
-          ・実況動画はソニックフロンティアに帰属します。<br>
-          </p>
-          <a href="https://sonic.sega.jp/SonicFrontiers/products/">＞＞購入はこちら＜＜</a>
+        <footer>
           <h4>製品情報</h4>
             <p>タイトル　ソニックフロンティア<br>
               ジャンル　新境地アクションアドベンチャー<br>
               プレイ人数　1人<br>
             </p>
-          <h4>対応機種</h4>
+          <h5>対応機種</h5>
             <p>■パッケージ版 / ダウンロード版<br>
               PlayStation®5 / PlayStation®4 / Nintendo Switch™<br>
               ■ダウンロード専売<br>
               Xbox Series X|S / Xbox One / Steam<br>
-              対応言語<br>
-              ■PlayStation®5 / PlayStation®4 /<br>
+            </p>
+          <h5>対応言語</h5>
+            <p>■PlayStation®5 / PlayStation®4 /<br>
               Nintendo Switch™ 版<br>
               音声：日本語、英語<br>
               字幕：日本語、英語、韓国語、中国語（繁体字、簡体字）<br>
@@ -117,14 +122,17 @@
               字幕：日本語、英語、韓国語、中国語（繁体字、簡体字）、<br>
               ポルトガル語（ブラジル）、フランス語、イタリア語、<br>
               ドイツ語、スペイン語（スペイン）、ロシア語、ポーランド語<br>
-              CERO<br>
-              A<br>
-              日本ゲーム大賞2022 フューチャー部門受賞<br>
+            </p>
+            <h5>CERO</h5>
+              <p>A</p>
+              <div class="award"><img src="assets/img/award.png" alt="日本ゲーム大賞2022 フューチャー部門受賞"></div>
+              <div class="footer-at">
               ※本タイトルのPS5ダウンロード版をご購入いただいた場合は、追加料金なしでPS4ダウンロード版をダウンロードできます。<br>
               ※本タイトルのPS4ダウンロード版をご購入いただいた場合は、追加料金なしでPS5ダウンロード版をダウンロードできます。<br>
               ※PS4パッケージ版をご購入いただいた場合は、PSストアでPS5ダウンロード版を入手することができます。<br>
               但し、PS4パッケージ版ご購入の方がPS5ダウンロード版をダウンロードしたりプレイしたりするには、その都度ディスクをPS5本体へ挿入する必要があります。<br>
               ディスクを使用しない「PS5 デジタル・エディション」の本体を利用される場合は、PS4パッケージ版を持っていても、PS5ダウンロード版を追加料金なしで入手することはできませんのでご注意ください。<br>
+            </div>
         </footer>
     </body>
 </html>
