--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p>Fischer's-フィッシャーズ-がCMに出演中の<br>
                 ゲーム『ソニックフロンティア』の発売を記念し、<br>
                 みなさんの実況動画が、CMになるキャンペーンを開催！</p>
-                <p>指定のハッシュタグをつけてYouTubeに投稿された実況動画から、<br>
+                <p>指定のハッシュタグをつけて<br class="br-sp">YouTubeに投稿された実況動画から、<br>
                 みなさんのリアクションやゲーム画面を、<br class="br-sp">『ソニックフロンティア』のCMとして編集し、<br>
                 WEB/TVで12月下旬よりＣＭ放送させていただきます！</p>
            </dev>
