--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <body>
         <header class="masthead">
           <h1> 【ソニックフロンティア 発売記念！】<br>
-            「ソニックフロンティア』を実況して<br class="br-sp">CMに出演しようキャンペーン！</h1>
+            『ソニックフロンティア』を実況して<br class="br-sp">CMに出演しようキャンペーン！</h1>
           <!-- <h1>・キャンペーン期間：<br class="br-sp">2022年11月8日(火)〜11月20日(日)</h1>-->
           <div class="sonic" style="text-align:center";> <img src="assets/img/banner01.jpg" alt="ソニックコラボ"> </div>
           <div class="cam"> <p>・キャンペーン期間：<br class="br-sp">2022年11月8日(火)〜11月20日(日)</p></div>
           <div class="header-text">
-              <h2>「ソニックフロンティア』を実況してCMに出演しようキャンペーン！」</h2>
+              <h2>『ソニックフロンティア』を実況してCMに出演しようキャンペーン！」</h2>
                 <p>Fischer's-フィッシャーズ-がCMに出演中の<br>
                 ゲーム『ソニックフロンティア』の発売を記念し、<br>
                 みなさんの実況動画が、CMになるキャンペーンを開催！</p>
