--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
     </head>
     <body>
         <header class="masthead">
-          <h1> 【ソニックフロンティア 発売記念！】<br>
-            『ソニックフロンティア』を実況して<br class="br-sp">CMに出演しようキャンペーン！</h1>
+          <h1> 【ソニックフロンティア 発売記念！】</h1>
           <!-- <h1>・キャンペーン期間：<br class="br-sp">2022年11月8日(火)〜11月20日(日)</h1>-->
           <div class="sonic" style="text-align:center";> <img src="assets/img/banner01.jpg" alt="ソニックコラボ"> </div>
-          <div class="cam"> <p>・キャンペーン期間：<br class="br-sp">2022年11月8日(火)〜11月20日(日)</p></div>
+          <div class="cam"> <h2>キャンペーン期間：<br class="br-sp">2022年11月8日(火)〜11月20日(日)</h2></div>
           <div class="header-text">
-              <h2>『ソニックフロンティア』を実況してCMに出演しようキャンペーン！」</h2>
                 <p>Fischer's-フィッシャーズ-がCMに出演中の<br>
                 ゲーム『ソニックフロンティア』の発売を記念し、<br>
                 みなさんの実況動画が、CMになるキャンペーンを開催！</p>
@@ -34,7 +32,6 @@
         </header>
 
         <main>
-          <div class="fish" style="text-align:center";><img src="assets/img/fish.jpg" alt="フィッシャーズの写真とソニックロゴ"></div>
           <div class="main-content">
           <h3>■CMキャンペーン出演採用者数</h3>
             <p>・未定（5名以上を予定しております）</p>
@@ -98,44 +95,7 @@
             ・実況動画はソニックフロンティアに帰属します。<br>
             </p>
           </div>
-            <div class="btn01"><a class="btn" href="https://sonic.sega.jp/SonicFrontiers/products/"><img src="assets/img/button-buy.png" alt="限定版/予約特典アイテム 購入はこちら"></a></div>
+            <div class="btn01"><a class="btn" href="https://sonic.sega.jp/SonicFrontiers/"><img src="assets/img/button-buy.png" alt="限定版/予約特典アイテム 購入はこちら"></a></div>
         </main>
-        <!-- Footer-->
-        <footer>
-          <h4>製品情報</h4>
-            <p>タイトル　ソニックフロンティア<br>
-              ジャンル　新境地アクションアドベンチャー<br>
-              プレイ人数　1人<br>
-            </p>
-          <h5>対応機種</h5>
-            <p>■パッケージ版 / ダウンロード版<br>
-              PlayStation®5 / PlayStation®4 / Nintendo Switch™<br>
-              ■ダウンロード専売<br>
-              Xbox Series X|S / Xbox One / Steam<br>
-            </p>
-          <h5>対応言語</h5>
-            <p>■PlayStation®5 / PlayStation®4 /<br>
-              Nintendo Switch™ 版<br>
-              音声：日本語、英語<br>
-              字幕：日本語、英語、韓国語、中国語（繁体字、簡体字）<br>
-              ■Xbox Series X|S / Xbox One /<br>
-              Steam 版<br>
-              音声：日本語、英語、フランス語、イタリア語、<br>
-              ドイツ語、スペイン語（スペイン）<br>
-              字幕：日本語、英語、韓国語、中国語（繁体字、簡体字）、<br>
-              ポルトガル語（ブラジル）、フランス語、イタリア語、<br>
-              ドイツ語、スペイン語（スペイン）、ロシア語、ポーランド語<br>
-            </p>
-            <h5>CERO</h5>
-              <p>A</p>
-              <div class="award"><img src="assets/img/award.png" alt="日本ゲーム大賞2022 フューチャー部門受賞"></div>
-              <div class="footer-at">
-              ※本タイトルのPS5ダウンロード版をご購入いただいた場合は、追加料金なしでPS4ダウンロード版をダウンロードできます。<br>
-              ※本タイトルのPS4ダウンロード版をご購入いただいた場合は、追加料金なしでPS5ダウンロード版をダウンロードできます。<br>
-              ※PS4パッケージ版をご購入いただいた場合は、PSストアでPS5ダウンロード版を入手することができます。<br>
-              但し、PS4パッケージ版ご購入の方がPS5ダウンロード版をダウンロードしたりプレイしたりするには、その都度ディスクをPS5本体へ挿入する必要があります。<br>
-              ディスクを使用しない「PS5 デジタル・エディション」の本体を利用される場合は、PS4パッケージ版を持っていても、PS5ダウンロード版を追加料金なしで入手することはできませんのでご注意ください。<br>
-            </div>
-        </footer>
     </body>
 </html>
