--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </p>
           <h3>■注意事項</h3>
             <p>・キャンペーンへの応募は、日本在住者に限ります。<br>
-            ・応募いただいた動画及び投稿内容（以下併せて、「投稿データ」といいます。）はキャンペーン事務局にて選定の上、2022年12月下旬よりCM放映及び「ソニック・ザ・ヘッジホッグ【公式】YouTubeチャンネル」での掲載を予定しています。<br>
+            ・応募いただいた動画及び投稿内容（以下併せて、「投稿データ」といいます。）はキャンペーン事務局にて選定の上、2022年12月下旬よりCM放映及び「ソニック・ザ・ヘッジホッグ【公式】YouTubeチャンネル」での掲載を予定しています。なお、応募いただいた投稿動画を当社において利用する場合でも、報酬等は一切発生しません 。<br>
             ・応募者と一緒に投稿データに映っている方がいらっしゃる場合は、必ず投稿前にその方から投稿データの使用につき、使用許諾を得てください。<br>
             ・投稿データに応募者以外の第三者の知的財産権が含まれる場合、必ず投稿前に権利者から投稿データの使用につき、使用許諾を得てください。<br>
             （原則、ソニック・ザ・ヘッジホッグ以外のIPが映像中に含まれないようご注意ください）<br>
@@ -73,18 +73,31 @@
           <h3>■免責事項</h3>
             <p>・株式会社セガは本キャンペーンの応募者に生じた一切のトラブル・損害（直接・間接を問いません）等について、いかなる責任も負いません。<br>
               ・株式会社セガは本キャンペーンの全部または一部を、応募者に事前に通知することなく変更または中止することがあります。なお、必要と判断した場合には、応募者への予告無く本要領を変更できるほか、本キャンペーンの適正な運用を確保するために必要な措置をとることができます。<br>
+              ・株式会社セガは、本規約、YouTubeが定める規約に反する不正な利用その他株式会社セガにおいて応募・採用を不適当と認める事情があった場合、株式会社セガにて予告なしに応募・採用を無効とさせていただく場合があります 。<br>
               ・本キャンペーンの応募にかかるインターネット接続料および通信費は応募者のご負担となります。<br>
             </p>
           <h3>■禁止事項</h3>
             <p>本キャンペーンへの応募に際し、動画内で以下の行為を禁止します。<br>
 
-              法令に違反する行為<br>
-              本キャンペーンの運営を妨げる行為<br>
-              他人を誹謗中傷し、またはその名誉若しくは信用を毀損する行為<br>
-              他人の著作権その他の知的財産権を侵害する行為<br>
-              他人の財産、プライバシー若しくは肖像権を侵害する行為<br>
-              わいせつ、児童ポルノ及び児童の性的搾取を助長するデータを投稿する行為<br>
-              営利を目的とした情報提供、広告宣伝もしくは勧誘行為<br>
+              ・投稿データにつきYouTube上でコンテンツID登録 を行わないでください。<br>
+              ・法令、YouTubeが定める規約及び 本規約に違反する行為<br>
+              ・本キャンペーンの運営を妨げる行為<br>
+              ・他人を誹謗中傷し、またはその名誉若しくは信用を毀損する行為<br>
+              ・他人の著作権その他の知的財産権を侵害する行為<br>
+              ・他人の財産、プライバシー若しくは肖像権を侵害する行為<br>
+              ・わいせつ、児童ポルノ及び児童の性的搾取を助長するデータを投稿する行為<br>
+              ・営利を目的とした情報提供、広告宣伝もしくは勧誘行為<br>
+              ・上記のほか、株式会社セガが不適切と判断する行為<br>
+            </p>
+            <p>
+              【賠償責任 】<br>
+              ・本キャンペーンへの応募に関し、応募者が本規約に違反し、または不正もしくは違法な行為により、弊社または第三者に損害を与えた場合、応募者はその損害を賠償しなければならないものとします。<br>
+            </P>
+            <P>
+              【個人情報の取扱について】<br>
+            ・応募者から個人情報を取得する場合、取得した個人情報は本キャンペーンの実施のために利用します。また、マーケティング等の目的のために個人を特定しない統計情報として利用することがございます。<br>
+            ・応募者の個人情報について、協力会社に業務を委託する場合がございます。ただし、法令等により開示を求められた場合を除き、応募者の個人情報について適切な安全管理対策を講じるとともに、応募者の許可なく、業務委託先以外の第三者に提供・開示することはありません。<br>
+            ・その他、応募者の個人情報の取扱いについては、当社のプライバシーポリシー（https://www.sega.co.jp/privacypolicy/）をご参照ください。 <br>
             </p>
             <p>
               ◎ソニックフロンティア　CM出演キャンペーン概要<br>
