--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="sonic" style="text-align:center";> <img src="assets/img/banner01.jpg" alt="ソニックコラボ"> </div>
           <div class="cam"> <h2>キャンペーン期間：<br class="br-sp">2022年11月8日(火)〜11月20日(日)</h2></div>
           <div class="header-text">
-                <p>Fischer's-フィッシャーズ-がCMに出演中の<br>
+                <p>フィッシャーズがCMに出演中の<br>
                 ゲーム『ソニックフロンティア』の発売を記念し、<br>
                 みなさんの実況動画が、CMになるキャンペーンを開催！</p>
                 <p>指定のハッシュタグをつけて<br class="br-sp">YouTubeに投稿された実況動画から、<br>
@@ -48,7 +48,7 @@
               その一部を切り取ってCMにさせていただく可能性がございます。<br class="br-pc">
               あらかじめご了承のうえ、ご参加ください。<br class="br-pc">
             </p>
-            <p>　※２
+            <p>※２
                 CMに採用させていただいたチャンネルと応募動画は、<br class="br-pc">
                 ソニック・ザ・ヘッジホッグ【公式】Twitter(@SonicOfficialJP)ほか、<br class="br-pc">
                 セガが運営するメディアでご紹介させていただく可能性がございます。<br class="br-pc">
